WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41338
REGRESSION(62052): It broke --minimal build
https://bugs.webkit.org/show_bug.cgi?id=41338
Summary
REGRESSION(62052): It broke --minimal build
Csaba Osztrogonác
Reported
2010-06-29 01:48:49 PDT
http://trac.webkit.org/changeset/62052
broke --minimal build: ../../../WebCore/bindings/js/ScriptEventListener.cpp:40:22: error: SVGNames.h: No such file or directory ../../../WebCore/bindings/js/ScriptEventListener.cpp: In function ‘WTF::PassRefPtr<WebCore::JSLazyEventListener> WebCore::createWindowAttributeEventListener(WebCore::Element*, WebCore::Attribute*)’: ../../../WebCore/bindings/js/ScriptEventListener.cpp:87: error: invalid use of incomplete type ‘struct WebCore::Element’ ../../../WebCore/dom/Node.h:52: error: forward declaration of ‘struct WebCore::Element’ ../../../WebCore/bindings/js/ScriptEventListener.cpp:110: error: no matching function for call to ‘WebCore::JSLazyEventListener::create(const WebCore::String&, const WebCore::String&, const WebCore::AtomicString&, WebCore::Element*&, WebCore::String&, int&, JSC::JSObject*&, WebCore::DOMWrapperWorld*)’ ../../../WebCore/bindings/js/JSLazyEventListener.h:32: note: candidates are: static WTF::PassRefPtr<WebCore::JSLazyEventListener> WebCore::JSLazyEventListener::create(const WebCore::String&, const WebCore::String&, const WebCore::String&, WebCore::Node*, const WebCore::String&, int, JSC::JSObject*, WebCore::DOMWrapperWorld*)
Attachments
Patch
(1.63 KB, patch)
2010-06-29 04:29 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Patch
(1.77 KB, patch)
2010-06-29 05:11 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2010-06-29 04:29:11 PDT
Created
attachment 60006
[details]
Patch
Csaba Osztrogonác
Comment 2
2010-06-29 04:31:56 PDT
!ENABLE(SVG) case needs #include "Element.h"
Csaba Osztrogonác
Comment 3
2010-06-29 05:11:08 PDT
Created
attachment 60010
[details]
Patch
Csaba Osztrogonác
Comment 4
2010-06-29 05:12:39 PDT
Comment on
attachment 60010
[details]
Patch Updated based on IRC discussing with Nikolas
Nikolas Zimmermann
Comment 5
2010-06-29 05:43:11 PDT
Comment on
attachment 60010
[details]
Patch r=me.
Brady Eidson
Comment 6
2010-06-29 09:44:37 PDT
Sorry about this one guys. The full Qt build has an EWS bot, which passed. I would've fixed this if the minimal build also had EWS ;)
WebKit Commit Bot
Comment 7
2010-06-29 10:04:01 PDT
Comment on
attachment 60010
[details]
Patch Clearing flags on attachment: 60010 Committed
r62129
: <
http://trac.webkit.org/changeset/62129
>
WebKit Commit Bot
Comment 8
2010-06-29 10:04:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug