2010-06-29  Csaba Osztrogonác  <ossy@webkit.org>

Reviewed by Nikolas Zimmermann.

        Buildfix for --minimal build after r62052
        https://bugs.webkit.org/show_bug.cgi?id=41338

        * bindings/js/ScriptEventListener.cpp: #if ENABLE(SVG) guards added.
        (WebCore::createWindowAttributeEventListener):

git-svn-id: svn://svn.chromium.org/blink/trunk@62129 bbb929c8-8fbe-4397-9dbb-9b2b20218538